Alteração layout responsividade para celular

--- a/src/components/DadosLista/styles.css
+++ b/src/components/DadosLista/styles.css
@@ -2,7 +2,7 @@
     background: var(--cor-background-header);
     padding: 0.6rem;
     margin: 0 0.8rem 1rem 0.2rem;
-    min-width: 13rem;
+    width: 13rem;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -34,7 +34,7 @@
 
 @media (min-width: 700px) {
     #box-dados {
-        width: 28rem;
+        max-width: 28rem;
         padding: 1.6rem;
         margin-bottom: 3rem;
         margin-right: 3.5rem;
@@ -47,5 +47,11 @@
     #box-dados .redesSociais img {
         width: 3.8rem;
         height: 3.8rem;
+    }
+}
+
+@media (max-width: 400px) {
+    #box-dados {
+        
     }
 }
