--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,12 @@ a {
         font-size: 62.5%;
     }
 }
+
+@media (max-width: 400px) {
+    :root {
+        font-size: 80%;
+    }
+    .container {
+        min-width: 100%;
+    }
+}
