Pagina cadastro e alteração de cores

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 :root {
     --cor-principal: #0f166d;
+    --cor-hover: #133a75;
     --cor-titulo: #701e1e;
-    --cor-texto: #506e7c;
+    --cor-texto: #474059;
     --cor-background: #F8F8FC;
     --cor-background-header: #f5f6f7;
     --cor-branco: #ffffff;
