--- a/src/pages/Listagem/styles.css
+++ b/src/pages/Listagem/styles.css
@@ -96,18 +96,18 @@
 
 #page-list footer a {
   padding: 0.4rem 0.6rem;
-  background: var(--cor-texto);
+  background: var(--cor-principal);
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: var(--cor-branco);
   font-weight: 700;
-  transition: opacity 0.4s;
+  transition: background-color 0.4s;
   border-radius: 0.3rem;
 }
 
 #page-list footer a:hover {
-    opacity: 0.6;
+    background-color: var(--cor-hover);
   }
 
 #page-list footer svg {
