--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -63,22 +63,20 @@
     align-items: center;
     display: flex;
     justify-content: flex-start;
-    transition: 0.8s;
-    border-radius: 0.5rem;
+    transition: opacity 0.5s;
+    border-radius: 0.3rem;
     line-height: 2.5rem;
     font-weight: bold;
 }
 
 .botoes-container a:first-child {
     background-color: var(--cor-principal);
+    transition: background-color 0.5s;
+    margin-bottom: 1.2rem;
 }
 
 .botoes-container a:hover {
-    opacity: 0.6;
-}
-
-.botoes-container a:first-child {
-    margin-bottom: 1.2rem;
+    opacity: 0.9;
 }
 
 .botoes-container span {
@@ -138,6 +136,7 @@
         height: 6.8rem;
         padding: 2.5rem;
         text-align: center;
+        border-radius: 0.8;
     }
 
     .botoes-container a:first-child {
