--- a/src/components/DadosLista/styles.css
+++ b/src/components/DadosLista/styles.css
@@ -2,17 +2,19 @@
     background: var(--cor-background-header);
     padding: 0.6rem;
     margin: 0 0.8rem 1rem 0.2rem;
-    width: 13rem;
+    width: 25rem;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: space-between;
 }
 
 #box-dados .dados {
-    margin-bottom: 1.2rem;
+    margin: 1rem;
     text-align: initial;
 }
 
 #box-dados .dados p {
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.3rem;
     font-size: 1rem;
     color: var(--cor-texto)
 }
@@ -22,19 +24,20 @@
 }
 
 #box-dados .redesSociais {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 0.8rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
 }
 
 #box-dados .redesSociais img {
-    width: 2.2rem;
-    height: 2.2rem;
+    width: 2rem;
+    height: 2rem;
+    display: block;
+    margin-bottom: 0.8rem;
 }
 
 @media (min-width: 700px) {
     #box-dados {
-        width: 28rem;
+        width: 40rem;
         padding: 1.6rem;
         margin-bottom: 3rem;
         margin-right: 3.5rem;
@@ -42,10 +45,12 @@
 
     #box-dados .dados p {
         font-size: 1.6rem;
+        margin-bottom: 1rem;
     }
 
     #box-dados .redesSociais img {
-        width: 3.8rem;
-        height: 3.8rem;
+        width: 3.5rem;
+        height: 3.5rem;
+        margin-bottom: 1.2rem;
     }
 }
