--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -4,7 +4,7 @@
 }
 
 #page-cadastro main {
-    max-width: 28rem;
+    width: 28rem;
     margin: 0.5rem auto;
 }
 
@@ -20,4 +20,47 @@
     font-weight: 600;
     padding-inline-start: 0;
     padding-inline-end: 0;
+}
+
+#page-cadastro form button {
+    width: 100%;
+    height: 2.2rem;
+    background-color: var(--cor-principal);
+    border-radius: 0.3rem;
+    border: 0;
+    color: var(--cor-branco);
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+    cursor: pointer;
+    align-self: flex-end;
+    transition: background-color 0.5s;
+}
+
+#page-cadastro form button:hover {
+    background-color: var(--cor-hover);
+}
+
+@media(min-width: 700px) {
+    #page-cadastro main {
+        width: 80rem;
+        margin-top: 3rem;
+    }
+
+    #page-cadastro form {
+        text-align: center;      
+    }
+
+    #page-cadastro fieldset legend {
+        text-align: start;
+        margin-left: 7.5rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.6rem;
+    }
+
+    #page-cadastro form button {
+        width: 79%;
+        height: 3rem;
+        font-size: 1.6rem;
+        margin-left: -2rem;
+    }
 }
