--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -22,6 +22,27 @@
     padding-inline-end: 0;
 }
 
+#page-cadastro .select-block {
+    position: relative;
+    text-align: initial;
+}  
+
+#page-cadastro .select-block select {
+    outline: none;
+    font-size: 1rem;
+    padding: 0.8rem;
+    border: 1px solid var(--cor-texto);
+    color: var(--cor-texto);
+    border-radius: 0.3rem;
+    background-color: var(--cor-background-header);
+    min-width: 28rem;
+    margin-top: 1rem;
+}
+
+#page-cadastro .select-block option {
+    color: var(--cor-texto);
+}
+
 #page-cadastro form button {
     width: 100%;
     height: 2.2rem;
