--- a/src/pages/Cadastro/styles.css
+++ b/src/pages/Cadastro/styles.css
@@ -22,6 +22,54 @@
     padding-inline-end: 0;
 }
 
+#page-cadastro .input-mask {
+    position: relative;
+    padding-top: 1rem;
+}
+
+#page-cadastro .input-mask input {
+    width: 100%;
+    position: relative;
+    outline: none;
+    font-size: 1rem;
+    padding: 0.8rem;
+    border: 1px solid var(--cor-texto);
+    border-radius: 0.3rem;
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    background-color: var(--cor-background-header);
+    margin-bottom: 0.5rem;
+}
+
+#page-cadastro .input-mask input:focus {
+    border: 2px solid var(--cor-principal);  
+}
+
+#page-cadastro .input-mask input::placeholder {
+    color: transparent;
+}
+
+#page-cadastro .input-mask label {
+    pointer-events: none;
+    position: absolute;
+    top: calc(50% - 0.5rem);
+    left: 0.5rem;
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    padding: 0.3rem;
+    box-sizing: border-box;
+    font-size: 1rem;
+}
+
+#page-cadastro .input-mask input:focus + label,
+#page-cadastro .input-mask input:not(:placeholder-shown) + label {
+    font-weight: bold;
+    top: 0;
+    background-color: var(--cor-background-header);
+}
+
 #page-cadastro .select-block {
     position: relative;
     text-align: initial;
@@ -95,6 +143,28 @@
         margin-left: 7.5rem;
         margin-bottom: 0.5rem;
         font-size: 1.6rem;
+    }
+
+    #page-cadastro .input-mask {
+        display: inline-block;
+        margin-right: 2.5rem;
+    }
+
+    #page-cadastro .input-mask input {
+        font-size: 1.5rem;
+        margin-bottom: 1.2rem;
+        padding: 1.2rem;
+        width: 30rem;
+    }
+
+    #page-cadastro .input-mask label {
+        top: calc(50% - 1.3rem);
+        font-size: 1.5rem;
+    }
+
+    #page-cadastro .input-mask input:focus + label,
+    #page-cadastro .input-mask input:not(:placeholder-shown) + label {
+        top: -0.3rem;
     }
 
     #page-cadastro .select-block select {
