--- a/src/components/DadosLista/styles.css
+++ b/src/components/DadosLista/styles.css
@@ -1,11 +1,10 @@
 #box-dados {
     background: var(--cor-background-header);
     padding: 0.6rem;
-    margin: 0 0.8rem 1rem 0.2rem;
-    width: 25rem;
+    margin: 1rem 0.8rem 1rem 0.2rem;
+    width: 23rem;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: space-between;
+    display: block;
 }
 
 #box-dados .dados {
@@ -24,20 +23,19 @@
 }
 
 #box-dados .redesSociais {
-    margin-right: 1rem;
-    margin-top: 1rem;
+    margin-top: 1.2rem;
+    display: flex;
+    justify-content: space-around;
 }
 
 #box-dados .redesSociais img {
-    width: 2rem;
-    height: 2rem;
-    display: block;
-    margin-bottom: 0.8rem;
+    width: 2.4rem;
+    height: 2.4rem;
 }
 
 @media (min-width: 700px) {
     #box-dados {
-        width: 40rem;
+        width: 38rem;
         padding: 1.6rem;
         margin-bottom: 3rem;
         margin-right: 3.5rem;
@@ -48,9 +46,12 @@
         margin-bottom: 1rem;
     }
 
+    #box-dados .redesSociais {
+        margin-top: 1.7rem;
+    }
+
     #box-dados .redesSociais img {
-        width: 3.5rem;
-        height: 3.5rem;
-        margin-bottom: 1.2rem;
+        width: 4rem;
+        height: 4rem;
     }
 }
