--- a/src/pages/Listagem/styles.css
+++ b/src/pages/Listagem/styles.css
@@ -54,7 +54,7 @@
     color: var(--cor-texto);
     border-radius: 0.3rem;
     background-color: var(--cor-background-header);
-    min-width: 15rem;
+    width: 14.5rem;
 }
 
 #page-list .select-block option {
@@ -153,7 +153,7 @@
     }
 
     #page-list main h3 {
-        font-size: 1.8rem;
+        font-size: 2.2rem;
     }
 
     #page-list footer {
