--- a/src/pages/Detalhes/styles.css
+++ b/src/pages/Detalhes/styles.css
@@ -2,3 +2,20 @@
     width: 100vw;
     height: 100vh;
 }
+
+#page-detalhes article {
+    background: var(--cor-background-header);
+    padding: 0.6rem;
+    margin: 5rem auto;
+    width: 28rem;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+    display: block;
+}
+
+#page-detalhes article p {
+    margin-bottom: 1rem;
+}
+
+#page-detalhes article p strong {
+    color: var(--cor-titulo);
+}
